# WRF

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE_CMAKE.txt  README.20141112  README.md  README_CMAKE.md  README_CMAKE_INSTALL.md  README_CMAKE_LIBS.md  asdf  azure-pipelines-full.yml  azure-pipelines-release.yml  azure-pipelines.yml  clean  commit_form_diffusion.txt  compile  configure.wrf  configure.wrf.pioPLUSnetcdf  gpu-configure.wrf  makelink.csh  namelist.input.testing  sourceme_hwrf  svn-commit.tmp
.ci/appveyor/: dump-vm-specs.ps1  increase-pagefile-size.ps1  install-netcdf.sh  install-wrf.bat  install-wrf.sh  patch-msmpi-v10.sh  patch-msmpi.sh  setup-dependencies.bat
.ci/azure/: macOS.yml  macos.yml  (+5 more)
.ci/azure-pipelines/: matrix.yml  release.yml  unix.yml  wats_diff.yml  wats_plots.yml  wats_run.yml  windows.yml
Registry/: CMakeLists.txt  Registry.EM_CHEM  Registry.EM_COMMON  Registry.EM_COMMON.var  Registry.NMM  Registry.backup  Registry.wrfchemvar  Registry.wrfvar  registry.chem  registry.chemplus  registry.diags  registry.dimspec  registry.var  registry.var_chem  registry.var_chemplus  registry.wrfplus
arch/: configure_new.defaults  noopt_exceptions  noopt_exceptions_f  postamble_new
chem/: Makefile  aerosol_driver.F  aerosol_driver_ad.F  aerosol_driver_tl.F  chem_driver.F  chem_driver_ad.F  chem_driver_tl.F  chemics_init.F  convert_emiss.F  depend.chem  emissions_driver.F  emissions_driver_ad.F  emissions_driver_tl.F  mechanism_driver.F  mechanism_driver_ad.F  mechanism_driver_tl.F  module_add_emiss_burn.F  module_add_emiss_burn_ad.F  module_add_emiss_burn_tl.F  module_aerosols_soa_vbs.F  module_chem_plumerise_scalar.F  module_chem_utilities_ad.F  module_chem_utilities_tl.F  module_dep_simple.F  module_dep_simple_ad.F  module_dep_simple_tl.F  module_dry_dep_vel.F  module_dry_dep_vel_ad.F  module_dry_dep_vel_tl.F  module_emissions_anthropogenics.F  module_emissions_anthropogenics_ad.F  module_emissions_anthropogenics_tl.F  module_gocart_aerosols.F  module_gocart_aerosols_ad.F  module_gocart_aerosols_tl.F  module_gocart_chem_ad.F  module_gocart_chem_tl.F  module_gocart_drydep.F  module_gocart_drydep_ad.F  module_gocart_drydep_tl.F  (+6 more)
cmake/: FindRPC.cmake  WRFConfig.cmake.in  WRFHelpers.cmake
cmake/post_install/: CMakeLists.txt  symlink_exe.cmake
dyn_em/: CMakeLists.txt  Makefile  couple_or_uncouple_em.F  depend.dyn_em  module_big_step_utilities_em.F  module_big_step_utilities_em_ad.F  module_big_step_utilities_em_tl.F  module_diffusion_em.F  module_em.F  module_em_ad.F  module_em_tl.F  module_first_rk_step_part1.F  module_first_rk_step_part1_ad.F  module_first_rk_step_part1_tl.F  module_first_rk_step_part2.F  module_first_rk_step_part2_ad.F  module_first_rk_step_part2_tl.F  module_initialize_real.F  module_sfs_nba_ad.F  module_small_step_em.F  nest_init_utils.F  rebalance_cycl.F  solve_em.F  solve_em_ad.F  solve_em_tl.F  start_em.F  start_em_ad.F  start_em_tl.F
dyn_exp/: Makefile
dyn_nmm/: Makefile  NMM_NEST_UTILS1.F  module_ADVECTION.F  module_PHYSICS_CALLS.F  module_STATS_FOR_MOVE.F  module_TERRAIN.F  module_initialize_real.F  module_initialize_tropical_cyclone.F  module_tornado_genesis.F  shift_domain_nmm.F  solve_nmm.F  start_domain_nmm.F
frame/: CMakeLists.txt  Makefile  collect_on_comm.c  module_configure.F  module_dm_stubs.F  module_domain.F  module_driver_constants.F  module_integrate.F  module_intermediate_nmm.F  module_io.F  module_io_quilt.F  module_io_quilt_new.F  module_io_quilt_old.F  module_tiles.F  module_timing.F  module_wrf_error.F
inc/: CMakeLists.txt
main/: CMakeLists.txt  Makefile  convert_em.F  depend.common  ideal_em.F  ideal_nmm.F  module_wrf_top.F  ndown_em.F  nup_em.F  real_em.F  real_nmm.F  tc_em.F  wrf.F
paper/: paper.bib  paper.md
phys/: CMakeLists.txt  Makefile  module_bl_acm.F  module_bl_acm_ad.F  module_bl_acm_tl.F  module_bl_gfs.F  module_bl_gfsedmf.F  module_bl_mynn.F  module_cu_gf.F  module_cu_gf_deep.F  module_cu_gf_sh.F  module_cu_gf_wrfdrv.F  module_cu_gfdrvr.F  module_cu_sas.F  module_cu_scalesas.F  module_cumulus_driver.F  module_diag_afwa_hail.F  module_diag_cl.F  module_diag_misc.F  module_diag_pld.F  module_diag_raprefl.F  module_diagnostics_driver.F  module_gfs_funcphys.F  module_microphysics_driver.F  module_mp_fast_sbm.F  module_mp_fer_hires.F  module_mp_full_sbm.F  module_mp_thompson.F  module_mp_wdm6.F  module_pbl_driver.F  module_pbl_driver_ad.F  module_pbl_driver_tl.F  module_physics_addtendc_ad.F  module_physics_addtendc_tl.F  module_physics_init.F  module_physics_init_ad.F  module_physics_init_tl.F  module_ra_rrtmg_lw.F  module_ra_rrtmg_lwf.F  module_ra_rrtmg_sw.F  (+28 more)
run/: mike-namelist.input  wrfinput_d01.REMOVED.git-id  wrfrun.s  wrfrun.s.1node  wrfrun.s.8nodes
share/: CMakeLists.txt  Makefile  dfi.F  init_modules.F  input_wrf.F  interp_fcn.F  landread.c  mediation_feedback_domain.F  mediation_force_domain.F  mediation_integrate.F  mediation_interp_domain.F  mediation_nest_move.F  mediation_pertmod_io.F  mediation_wrfmain.F  module_adtl_grid_utilities.F  module_check_a_mundo.F  module_interp_nmm.F  module_interp_store.F  output_wrf.F  solve_interface.F  solve_nmm.int  start_domain.F
test/: CMakeLists.txt
test/em_b_wave/: CMakeLists.txt
test/em_convrad/: CMakeLists.txt
test/em_fire/: CMakeLists.txt
test/em_grav2d_x/: CMakeLists.txt
test/em_heldsuarez/: CMakeLists.txt
test/em_hill2d_x/: CMakeLists.txt
test/em_les/: CMakeLists.txt
test/em_quarter_ss/: CMakeLists.txt
test/em_real/: CMakeLists.txt  adtl_forc_locations.ncl  adtl_forc_locations.ncl_100COLUMN  disperse_anthro_emissions.ncl  namelist.input  namelist.input_WRFDA-Chem  namelist.input_WRFPLUS-Chem  plus.io_config
test/em_scm_xy/: CMakeLists.txt
test/em_seabreeze2d_x/: CMakeLists.txt
test/em_squall2d_x/: CMakeLists.txt
test/em_squall2d_y/: CMakeLists.txt
test/em_tropical_cyclone/: CMakeLists.txt
test/nmm_real/: namelist.input.HWRF
test/nmm_tropical_cyclone/: namelist.input
tools/: CMakeLists.txt  fortran_2003_fflush_test.F  gen_interp.c  gen_irr_diag.c  registry.c
(+190 files in other folders)
