# Copyright 2018 M. Riechert and D. Meyer. Licensed under the MIT License.

add_subdirectory(em_b_wave)
add_subdirectory(em_convrad)
add_subdirectory(em_fire)
add_subdirectory(em_grav2d_x)
add_subdirectory(em_heldsuarez)
add_subdirectory(em_hill2d_x)
add_subdirectory(em_les)
add_subdirectory(em_quarter_ss)
add_subdirectory(em_real)
add_subdirectory(em_scm_xy)
add_subdirectory(em_seabreeze2d_x)
add_subdirectory(em_squall2d_x)
add_subdirectory(em_squall2d_y)
add_subdirectory(em_tropical_cyclone)